--- a/casasr/index.html
+++ b/casasr/index.html
@@ -139,7 +139,84 @@ International Council on Systems Engineering. (2022). <em>INCOSE vision 2035</em
     </footer>
 </article>
          <!-- Module 2.2 Blog Post Starts here -->
+<h1>How Cognitive Demands Shape Usability and How Designers Can Reduce Them</h1>
 
+<p>Every time you open an app on your phone or visit a website to book a flight, your brain is doing an incredible amount of work. Even if you feel like you are just relaxing and scrolling, your mind is constantly filtering out noise, deciding what to click, and trying to remember what you just did. When an interface feels smooth and intuitive, it is because a designer understood how your brain works. When a system feels like a trap or leaves you feeling frustrated, it is usually because the design asked your brain to do something it was never evolved to do. Understanding how we think is not just a side project for designers. It is the foundation of building anything that people actually want to use.</p>
+
+<p>This paper looks at the invisible world of cognitive demands. We will explore how our eyes sample the world, why our memory is so much smaller than we think, and how designers can build systems that respect our limits. The goal is to show that good design is not just about looking nice. It is about reducing the mental effort required to get through the day.</p>
+
+<h2>The Illusion of High Resolution Sight</h2>
+
+<p>Imagine you are standing in a dark room with a very small flashlight. To see the whole room, you have to move that tiny beam of light around constantly. You never actually see the whole room at once, but your brain stitches the pieces together so that you feel like you do. This is almost exactly how human vision works. We often think of our eyes as high definition cameras that capture everything in front of us in perfect detail. However, our biology tells a very different story.</p>
+
+<p>The human eye has a tiny area in the center called the fovea. This small region is responsible for all of our high resolution vision. To get a sense of how small this is, hold your arm straight out and look at your thumbnail. That tiny area is the only part of your vision that can see in sharp detail. Everything else around it is part of your peripheral vision, and its resolution is remarkably low (Johnson, 2020). While the fovea is only about one percent of the retina, your brain devotes about half of its visual processing power to the information coming from that tiny spot.</p>
+
+<p>This means that when you look at a computer screen, you are actually only reading a very small part of it at any given moment. Your eyes have to dart around, a process called a saccade, to gather information piece by piece. Your brain then creates an illusion of a complete, sharp image. Designers who do not understand this often clutter screens with too much information. If a user has to search through fifty different icons to find the one they need, their brain has to work overtime to move that tiny spotlight of foveal vision across the screen. This creates mental fatigue and increases the chance that the user will miss exactly what they are looking for.</p>
+
+<h2>The Threat of Motion in the Corner of the Eye</h2>
+
+<p>Because our peripheral vision is so low resolution, it is not very good at identifying shapes or reading text. However, it is incredibly sensitive to motion. This is an evolutionary survival trait. For our ancestors, motion in the corner of the eye might have meant a predator was about to strike. Today, that same biological trigger is hijacked by flashing advertisements, auto playing videos, and pop up windows.</p>
+
+<p>When something moves in the periphery, your brain automatically pulls your foveal vision toward it. You cannot help it. It is a primitive reflex. If a designer puts a moving animation next to a long article you are trying to read, your brain is constantly fighting the urge to look at the motion. This creates a state of cognitive conflict. You want to focus on the text, but your biology is telling you to look at the moving object. By the time you finish the article, you feel more tired than you should. Designers can respect this by keeping the periphery quiet and only using motion when it is absolutely necessary to grab the user's attention for a critical reason (Ware, 2008).</p>
+
+<h2>The Spotlight of Working Memory</h2>
+
+<p>If vision is the flashlight we use to see the world, working memory is the small desk where we process that information. For a long time, people believed that humans could hold about seven pieces of information in their mind at once. Modern research suggests this was way too optimistic. In reality, our working memory can only handle about four chunks of information at a time (Johnson, 2020).</p>
+
+<p>Think about how hard it is to remember a random phone number while someone is talking to you. As soon as a new piece of information enters your focus, an old piece of information is likely to get pushed out. This is why multi step instructions that disappear are so frustrating. If a website shows you a code on one page and expects you to remember it while you navigate to a different screen, it is gambling with your limited working memory.</p>
+
+<p>Designers can reduce this burden by keeping information visible. This is known as the principle of recognition over recall. It is much easier for the brain to recognize an icon on a screen than it is to recall a specific command from memory. For example, a toolbar with visible icons for saving, printing, and deleting allows the user to simply look and click. If those same functions were hidden inside a complex menu system, the user would have to memorize the location of each one. Every time a user has to stop and think about where a button is, their progress toward their actual goal stops.</p>
+
+<h2>The Hunt for Information Scent</h2>
+
+<p>When people use the internet, they act like hunters. They are usually looking for something specific, like the price of a flight or a button to pay a bill. Cognitive scientists call this behavior following the information scent. Users scan a page looking for words or images that match their goal. If they see a word that looks like it might lead them in the right direction, they click it. If the scent is weak or confusing, they get frustrated and leave (Nielsen, 2003).</p>
+
+<p>Imagine you want to cancel a subscription. You look at the menu and see two options: My Account and Settings. You aren't sure which one to click. The scent is blurry. If the designer had labeled the button Manage Subscriptions, the scent would be strong and clear. When labels are vague or use internal company jargon, the user has to stop and perform a mental calculation. They have to ask themselves which path is more likely to work. This small moment of hesitation might seem minor, but when it happens dozens of times in a single session, the cumulative cognitive load becomes overwhelming.</p>
+
+<h2>The Law of Complexity</h2>
+
+<p>Every system has a certain amount of inherent complexity that cannot be removed. Larry Tesler, a famous computer scientist, argued that you can simplify an interface, but you cannot delete the complexity entirely. You can only move it. This is known as the law of conservation of complexity (Yablonski, 2020).</p>
+
+<p>For example, think about an email app. The process of sending an email requires a sender, a receiver, a subject, and a message. You cannot get rid of those four things without the system breaking. However, a designer can decide who has to deal with that complexity. They could make the user type out complicated technical headers and server addresses every time they send a message. Or, they could design the software to handle all the technical details in the background so the user only has to worry about the message itself.</p>
+
+<p>Good design takes the burden of complexity off the user and places it on the system. When a website automatically fills in your shipping address based on your saved profile, it is handling the complexity for you. When a designer refuses to make these choices, the complexity is shipped directly to the user. This often results in long, intimidating forms and confusing workflows that punish the brain for simply trying to complete a task.</p>
+
+<h2>The Trap of the Cleanup Step</h2>
+
+<p>Have you ever used a public photocopier and walked away only to realize five minutes later that you left your original document on the glass? This is a classic example of a post completion error. Our brains are incredibly efficient at saving energy. As soon as we achieve our primary goal, our focus immediately shifts to the next thing. In the case of the photocopier, your goal was the copies. Once you had the copies in your hand, your brain marked the task as done and wiped the working memory clean. The cleanup step of taking your original document was forgotten because it was not the main goal (Johnson, 2020).</p>
+
+<p>Designers can prevent these errors by changing the order of the steps. This is why many modern bank machines require you to take your bank card back before they will give you your cash. The designer knows that your main goal is the money. If they gave you the money first, you would be much more likely to walk away and leave your card in the machine. By forcing the cleanup step to happen before the goal is reached, the designer uses the brain's own goal seeking behavior to ensure the user does not make a mistake.</p>
+
+<h2>Consistency and the Power of Patterns</h2>
+
+<p>One of the best ways to reduce cognitive load is to make things predictable. When a user enters a new website, they bring with them a mental model of how websites should work. They expect the logo to be in the top left corner and the search bar to be near the top right. If a designer decides to be creative and puts the navigation menu at the very bottom of the page, they are breaking the user's mental model.</p>
+
+<p>Every time a system behaves in an unexpected way, the user has to stop and learn a new rule. This is why consistency is so important in design. If every page of an app uses the same colors for buttons and the same font for headings, the user can navigate without thinking. They can rely on their habits instead of their active problem solving skills. Habitual actions are much cheaper for the brain than active thinking. Designers who follow established patterns allow their users to focus on the content of the app rather than the mechanics of how to use it (Yablonski, 2020).</p>
+
+<h2>Visual Cues and the Layout Shift</h2>
+
+<p>When a website is loading, sometimes the text will jump around as images and ads pop into place. This is more than just a minor annoyance. It is a major cognitive disruption. Because our eyes are constantly scanning and predicting where information will be, a sudden layout shift forces the brain to re-evaluate the entire screen. It breaks the user's focus and can even lead to accidental clicks on the wrong buttons.</p>
+
+<p>Designers can solve this by using specific technical tools, such as setting the width and height of images in the code before they load. This reserves the space on the screen so that the rest of the content does not have to move when the image finally appears. This creates a stable environment for the foveal spotlight to move through. When the layout is stable, the brain can plan its eye movements more effectively, making the experience feel faster and more reliable even if the internet connection is slow.</p>
+
+<h2>The Responsibility of the Designer</h2>
+
+<p>At the end of the day, designers are the architects of our digital environments. Just as a physical architect must understand gravity to build a house that stands, a digital designer must understand cognition to build an interface that works. We have seen that our vision is limited, our memory is fragile, and our attention is easily stolen. These are not flaws in human beings. They are the standard operating conditions of the human brain.</p>
+
+<p>Good design does not try to change how humans think. Instead, it adapts the technology to fit the human. This means keeping screens simple, making choices clear, and ensuring that the most important information is always within reach. It means providing immediate feedback so the user never has to wonder if their click worked. It means building systems that forgive us for being human.</p>
+
+<p>When we build with these principles in mind, we create a world that is less stressful. People can get their work done faster, stay connected with their loved ones more easily, and feel a sense of mastery over the tools they use. Good design works with your brain, not against it. By respecting our cognitive limits, designers can turn the digital world into a place where we can truly flourish.</p>
+
+<p>References</p>
+
+<p>Johnson, J. (2020). Designing with the mind in mind: Simple guide to understanding user interface design rules. Morgan Kaufmann.</p>
+
+<p>Nielsen, J. (2003). Information scent: How users decide where to go next. Nielsen Norman Group.</p>
+
+<p>Ware, C. (2008). Visual thinking: For design. Morgan Kaufmann.</p>
+
+<p>Yablonski, J. (2020). Laws of UX: Using psychology to design better products and services. O'Reilly Media.</p>
+</p>
          <!-- Module 2.3 Blog Post Starts here -->
 
          <!-- Module 3.1 Blog Post Starts here -->
